change content for 4 gang menu

--- a/Kochwelt/rezept_des_tages.html
+++ b/Kochwelt/rezept_des_tages.html
@@ -55,10 +55,10 @@
 
     <main class="container">
 
-        <h1 class="recipe-title">Rote Wintersuppe</h1>
+        <h1 class="recipe-title">4 Gänge Menü</h1>
 
 
-        <img class="recipe-image" src="./img/wintersuppe.webp" alt="Wintersuppe">
+        <img class="recipe-image" src="./img/4gang.webp" alt="4gang">
 
 
         <section class="recipe-meta">
@@ -66,14 +66,14 @@
             <div class="meta-item">
 
                 <img src="./img/icons/clock-regular.svg" alt="Uhr" class="meta-icon">
-                20 Min.
+                250 Min.
             </div>
 
             <div class="meta-item">
                 <img src="./img/icons/brain-solid.svg" alt="Schweregrad" class="meta-icon">
-                Simpel
+                Herrausvordernd
             </div>
-
+            
             <div class="meta-item">
                 <img src="./img/icons/calendar-alt-regular.svg" alt="Kalender" class="meta-icon">
                 23.11.2024
@@ -106,7 +106,7 @@
 
             <div class="meta-item-preparation">
                 <img src="./img/icons/clock-regular.svg" alt="Uhr" class="meta-icon">
-                Gesamtzeit: 20 Minuten
+                Gesamtzeit: 250 Minuten
             </div>
 
             
@@ -116,12 +116,14 @@
         <section class="ingredients-text">
 
             <p>
-                Die Zwiebeln in Butter anschwitzen. Ingwer- und Apfelwürfel zugeben, kurz mitschwitzen und mit dem Wein ablöschen. 
-                Die Brühe zugießen und zum Kochen bringen. Rote Bete und Kartoffeln zugeben, aufkochen, die Hitze reduzieren, zudecken und ca. 15-20 Minuten köcheln lassen. 
-                Pürieren, abschmecken und zum Kochen bringen. Den Schmand zugeben, garnieren und genießen.
-                Tipp: Rote Bete kann vorgegart (dann aber noch fest) oder frische Knolle sein. 
-                Die besten Erfahrungen habe ich mit selbst halbgar gekochter Roter Bete gemacht, dann ist das Schälen und Schneiden sauberer. 
-                Kartoffeln sorgen für die Konsistenz und auch dafür, dass die Farbe nicht so stechend blutig wirkt.
+                Tauchen Sie ein in unsere kulinarische Welt und entdecken Sie vier einzigartige Geschmackserlebnisse, 
+                die Ihre Sinne verzaubern werden. Beginnen Sie mit einem knackigen Wintersalat, der mit frischen Aromen und saisonalen Zutaten begeistert. 
+                Als nächstes erwartet Sie eine wärmende Wintersuppe, die mit ihrer intensiven Farbe und ihrem reichen Geschmack perfekt für kalte Tage ist.
+                Lassen Sie sich anschließend von einer zarten Entenbrust mit Honig und Senf verführen - ein Hauptgang, 
+                der Raffinesse und herzhafte Aromen vereint. Krönen Sie Ihr Menü mit einer unwiderstehlichen Nougatmousse, 
+                begleitet von einem erfrischenden Kalamansi-Sorbet - ein Dessert, das süße Verführung mit exotischer Note perfekt inszeniert. 
+                Egal ob Sie ein erfahrener Koch oder ein neugieriger Anfänger sind, unsere Rezepte bieten für jeden Geschmack das Richtige. 
+                Lassen Sie sich inspirieren und erleben Sie unvergessliche Genussmomente!
             </p>
 
         </section>
@@ -137,7 +139,7 @@
 
                     <img class="profile-image" src="./img/pascallogo.png" alt="Team Member">
 
-                    <div>Pascal Gröger</div>
+                    <div>Arian, Pascal, Danny und Ramon </div>
 
                 </div>
 
