add design for Gang Auswahl

--- a/Kochwelt/rezept_des_tages.html
+++ b/Kochwelt/rezept_des_tages.html
@@ -85,16 +85,73 @@
 
         <section>
             <select onchange="recipeSelector()" id="recipe-selector">
+                <option>Gang Auswahl</option>
                 <option>Salat</option>
                 <option>Vorspeise</option>
                 <option>Hauptgang</option>
                 <option>Nachtisch</option>
             </select>
             <div id="recipe-content">
-                <div class="recipe-0"><a href="/danny_rezept.html">Salat</a></div>
-                <div class="recipe-1"><a href="/pascal_rezept.html">Vorspeise</a></div>
-                <div class="recipe-2"><a href="/adrians_rezept.html">Hauptgang</a></div>
-                <div class="recipe-3"><a href="/ramon_rezept.html">Nachtisch</a></div>
+                <div class="recipe-0"><a href='#'></a></div>
+                <div class="recipe-1"><a href="./danny_rezept.html">
+                    <img src="./img/wintersalat.jpg"></a>
+                    <div class="recipe-content-text">
+                        <h3>Wintersalat</h3>
+                        <p>
+                        Dieser knackige Wintersalat ist eine wahre Vitaminbombe und bringt Farbe auf den Tisch, 
+                        wenn die Tage kürzer werden. Frischer Feldsalat bildet die Basis und wird mit fruchtigen Granatapfelkernen,
+                        saftigen Orangenfilets und gerösteten Walnüssen kombiniert. 
+                        Cremiger Ziegenweichkäse verleiht dem Salat eine milde Würze und rundet das Geschmackserlebnis ab. 
+                        Das fruchtig-herbe Dressing aus Balsamico-Essig, Honig, Senf, 
+                        Orangensaft und Olivenöl harmoniert perfekt mit den übrigen Zutaten. 
+                        Ein leichter und gesunder Genuss, der sowohl als Vorspeise als auch als Beilage überzeugt.
+                        </p>
+                    </div>    
+                </div>
+                <div class="recipe-2"><a href="./pascal_recipe.html">
+                    <img src="./img/wintersuppe.webp"></a>
+                    <div class="recipe-content-text">
+                        <h3>Wintersuppe</h3>
+                        <p>
+                            Diese wärmende Wintersuppe ist die perfekte Antwort auf kalte Tage. 
+                            Die leuchtend rote Farbe verrät bereits die intensiven Aromen, die sich in dieser Suppe vereinen. 
+                            Zarte Rote Bete und Kartoffeln bilden die cremige Basis, während Zwiebeln, Ingwer und Apfel für eine fein abgestimmte Süße und Würze sorgen. 
+                            Ein Schuss Weißwein oder Apfelwein verleiht der Suppe eine besondere Note. 
+                            Verfeinert mit einem Klecks Schmand und frischen Kräutern, ist diese Wintersuppe ein wahrer Genuss, der von innen wärmt und glücklich macht.
+                        </p>
+                    </div>    
+                </div>
+                <div class="recipe-3"><a href="./adrians_rezept.html">
+                    <img src="./img/Entenbrust.png"></a>
+                    <div class="recipe-content-text">
+                        <h3>Entenbrust mit Honig und Senf</h3>
+                        <p>
+                            Die Entenbrust mit Honig und Senf ist ein raffiniertes Gericht, 
+                            das mit seiner Kombination aus knuspriger Haut und zartem Fleisch begeistert. 
+                            Die rautenförmig eingeschnittene Fettseite der Entenbrust wird knusprig angebraten und anschließend im Ofen saftig gegart. 
+                            Eine fruchtige Soße aus Orangensaft, Grand Marnier und Johannisbeergelee, 
+                            verfeinert mit Honig und Senf, rundet das Geschmackserlebnis perfekt ab. 
+                            Die Süße des Honigs harmoniert wunderbar mit der Schärfe des Senfs und unterstreicht den Geschmack der Ente. 
+                            Serviert mit gebratenen Orangenfilets und passenden Beilagen wie Rösti oder Kroketten, 
+                            ist die Entenbrust mit Honig und Senf ein Festmahl für die Sinne.
+                        </p>
+                    </div>    
+                </div>
+                <div class="recipe-4"><a href="./ramon_rezept.html">
+                    <img src="./img/nougat-kalamansi.png"></a>
+                    <div class="recipe-content-text">
+                        <h3>Nougatmousse mit Kalamansi-Sorbet</h3>
+                        <p>
+                            Die Nougatmousse mit Kalamansi-Sorbet ist ein Dessert der Extraklasse, das süße Verführung mit exotischer Frische vereint. 
+                            Die luftig-leichte Nougatmousse, zubereitet mit feinster Milchschokolade und aromatischem Nougat, 
+                            schmilzt förmlich auf der Zunge. Das intensive Aroma des Nougats wird durch einen Hauch Amaretto gekonnt abgerundet. 
+                            Das dazu servierte Kalamansi-Sorbet sorgt für einen erfrischenden Kontrast und begeistert mit seiner exotischen Säure. 
+                            Die Kombination aus cremiger Mousse und fruchtigem Sorbet ist ein harmonisches Zusammenspiel, 
+                            das Ihre Geschmacksknospen verwöhnen wird. Ein Dessert, 
+                            das perfekt für besondere Anlässe oder einen genussvollen Abend geeignet ist.
+                        </p>
+                    </div>    
+                </div>
             </div>
         </section>
 
