change img tag fix names in erstellt von add aspect ratio

--- a/Kochwelt/index.html
+++ b/Kochwelt/index.html
@@ -59,7 +59,7 @@
 <main class="my-body">    
 
     <div class="recipe-section">
-            <img src="./img/croissant.jpg">
+            <img src="./img/4gangmenu.webp" alt="4gangmenu">
         <div class="recipe-content">
 
             <h1 class="recipe-title">Rezept des Tages</h1>
@@ -75,19 +75,19 @@
     </section>
         <section class="menu-section">
             <div class="menu">
-                <a href="danny_rezept.html"><img src="./img/wintersalat.jpg"></a>
+                <a href="danny_rezept.html"><img src="./img/wintersalat.jpg" alt="Wintersalat"></a>
                 <h3>Wintersalat</h3>
             </div>
             <div class="menu">
-                <a href="pascal_recipe.html"><img src="./img/wintersuppe.webp"></a>
+                <a href="pascal_recipe.html"><img src="./img/wintersuppe.webp" alt="Wintersuppe"></a>
                 <h3>Wintersuppe</h3>
             </div>
             <div class="menu">
-                <a href="adrians_rezept.html"><img src="./img/Entenbrust.png"></a>
+                <a href="adrians_rezept.html"><img src="./img/Entenbrust.png" alt="Entenbrust"></a>
                 <h3>Entenbrust mit <br>Honig und Senf</h3>
             </div>
             <div class="menu">    
-                <a href="ramon_rezept.html"><img src="./img/nougat-kalamansi.png"></a>
+                <a href="ramon_rezept.html"><img src="./img/nougat-kalamansi.png" alt="Nougatmousse mit Kalamansi-Sorbet"></a>
                 <h3>Nougatmousse mit <br>Kalamansi-Sorbet</h3>
             </div>
         </section>
