--- a/Kochwelt/rezept_des_tages.html
+++ b/Kochwelt/rezept_des_tages.html
@@ -196,7 +196,7 @@
 
                     <img class="profile-image" src="./img/pascallogo.png" alt="Team Member">
 
-                    <div>Arian, Pascal, Danny und Ramon </div>
+                    <div>Danny, Pascal, Adrian und Ramon </div>
 
                 </div>
 
