fix warnings and errors and remove stupid things;)

--- a/Kochwelt/impressum.html
+++ b/Kochwelt/impressum.html
@@ -34,7 +34,7 @@
         32473 Bendingen</p>
 
         <h2>Vertreten durch:</h2>
-        <p>Ramon, Danny, Arian und Pascal</p>
+        <p>Ramon, Danny, Adrian und Pascal</p>
 
 
         <h2>Kontakt:</h2>
@@ -44,7 +44,7 @@
 
         <h2>Registereintrag:</h2>
         <p>Eintragung im Handelsregister.<br>
-           Registergericht: Amtsgericht Neu Ulm<br>
+           Registergericht: Amtsgericht Neu-Ulm<br>
            Registernummer: HRB 12345
         </p>
 
