--- a/Kochwelt/index.html
+++ b/Kochwelt/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kochwelt</title>
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="rezept_des_tages.css">
-    <link rel="stylesheet" href="ramon_rezept.css">
-    <link rel="stylesheet" href="impressum.css">
-    <link rel="stylesheet" href="kontakt.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -28,14 +24,14 @@
             <div class="logo-head">
                 <a href="index.html">
                     <picture >
-                        <source media="(max-width: 800px)" srcset="./img/logo_small.png"></source>
+                        <source media="(max-width: 800px)" srcset="./img/logo_small.png">
                         <img src="./img/logo.png" alt="LOGO">            
                     </picture>
                 </a>
             </div>
             <div class="mobile-button-group">
-                <img onclick="toggleMobileMenu()" aria-hidden="true" focusable="false" src="./img/icons/bars-solid.svg"></img>
-                <img onclick="toggleMobileMenu()" class="mobile-hidden" aria-hidden="true" focusable="false" src="./img/icons/bars-staggered-solid.svg"></img>
+                <img onclick="toggleMobileMenu()" aria-hidden="true" focusable="false" src="./img/icons/bars-solid.svg" alt="">
+                <img onclick="toggleMobileMenu()" class="mobile-hidden" aria-hidden="true" focusable="false" src="./img/icons/bars-staggered-solid.svg" alt="">
             </div>
             <nav class="nav-links">
                 <a href="./index.html">Start</a>
@@ -63,7 +59,21 @@
         <div class="recipe-content">
 
             <h1 class="recipe-title">Rezept des Tages</h1>
-            <p class="recipe-description">4 Gänge Menü </p>
+            <p class="recipe-description">Wintermenü – Genuss in vier Gängen <br>
+
+                🌱 Knackiger Wintersalat
+                Feldsalat trifft auf Granatapfelkerne, Orangenfilets und geröstete Walnüsse. Cremiger Ziegenkäse und ein fruchtiges Balsamico-Dressing machen ihn zur perfekten Einstimmung.
+                <br>
+                🍲 Wärmende Wintersuppe
+                Rote Bete, Kartoffeln, Ingwer und Apfel verschmelzen zu einer samtigen Suppe mit feiner Süße, veredelt durch einen Hauch Weißwein und frische Kräuter.
+                <br>
+                🍗 Entenbrust mit Honig und Senf
+                knusprige Haut, zartes Fleisch und eine fruchtige Sauce aus Orangensaft, Grand Marnier und Johannisbeergelee – ein Highlight der Saison, serviert mit Rösti oder Kroketten.
+                <br>
+                🍫 Nougatmousse mit Kalamansi-Sorbet
+                samtige Mousse aus feinstem Nougat trifft auf die spritzige Frische von Kalamansi. Ein harmonisches Finale für einen unvergesslichen Abend.
+                <br>
+                Neugierig geworden? Reserviere jetzt und genieße! 💫</p>
             <a href="rezept_des_tages.html" class="recipe-button">Rezept öffnen</a>
         </div>
 
@@ -102,9 +112,9 @@
         <div class="info-board">
                 <p>Eine Pfanne eignet sich hervorragend für gleichmäßiges Braten und
                     Anbraten, besonders bei flachen Speisen. Ein Wok hingegen ermöglicht
-                    schnelles  Garen bei hoher Hitze und ist ideal für asiatische
+                    schnelles Garen bei hoher Hitze und ist ideal für asiatische
                     Gerichte und größere Mengen Gemüse, da er eine bessere
-                    Wärmeverteilung hat. Die Wahl hängt vom  Gericht und der gewünschten
+                    Wärmeverteilung hat. Die Wahl hängt vom Gericht und der gewünschten
                     Gartechnik ab.
                 </p>
                 
@@ -120,7 +130,7 @@
 <footer>
     <section class="footer">
         <picture >
-            <source media="(max-width: 700px)" srcset="./img/logo_small.png"></source>
+            <source media="(max-width: 700px)" srcset="./img/logo_small.png">
             <img class="footer_logo" src="./img/logo-white.png" alt="LOGO">            
         </picture>
 
@@ -130,11 +140,11 @@
         </div>
 
         <div class="socials">
-            <a href="https://www.instagram.com/" target="_blank"><img class="sociallogo" src="./img/social_icons/Instagram.png"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img class="sociallogo" src="./img/social_icons/Instagram.png" alt=""></a>
 
-            <a href="https://de-de.facebook.com/"  target="_blank"><img class="sociallogo"  src="./img/social_icons/facebook_logo.png"></a>
+            <a href="https://de-de.facebook.com/"  target="_blank"><img class="sociallogo"  src="./img/social_icons/facebook_logo.png" alt=""></a>
 
-            <a href="https://x.com/"  target="_blank"><img class="sociallogo"  src="./img/social_icons/Twitter_Icon.png" ></a>
+            <a href="https://x.com/"  target="_blank"><img class="sociallogo"  src="./img/social_icons/Twitter_Icon.png" alt=""></a>
 
         </div>
     </section>
