--- a/Kochwelt/kontakt.html
+++ b/Kochwelt/kontakt.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/adrians_rezept.css">
     <link rel="stylesheet" href="./css/kontakt.css">
+    <link rel="stylesheet" href="contact_site.css">
    
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Viga&display=swap"
@@ -14,18 +15,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <style>
-        .contact-form{
-            display: flex;
-            flex-direction: column;
-            max-width: 800px;
-            width: 50%;
-            min-width: 200px;
-            gap: 8px;
-            padding: 24px;
-            border: 0;
-            background-color: #DCDCDC;
-            border-radius: 2%;
-        }
+
+
+
     </style>
 </head>
 <body>
@@ -64,12 +56,6 @@
                 <textarea name="message" id="message" class="rounded-input" required rows="6" cols="50"></textarea>
             </div>
             <div class="datenschutz">
-                <input type="checkbox" name="datenschutz" id="datenschutz">
-                <label for="datenschutz">
-                    Sie erklären sich damit einverstanden, dass Ihre Daten zur Bearbeitung Ihres Anliegens verwendet werden. Weitere Informationen und Widerrufshinweise finden Sie in der
-                    <!--Link zur Datenschutzerklärung-->
-                    <a href="">Datenschutzterklärung</a>
-                </label>
                 <button class="send">Abschicken</button>
             </div>
         </form>
