--- a/Kochwelt/danny_rezept.html
+++ b/Kochwelt/danny_rezept.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kochwelt</title>
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/danny_rezept.css">
     <script src="script.js"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Viga&display=swap"
@@ -13,199 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <style>
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .recipe-title {
-            text-align: center;
-            font-size: 28px;
-            font-weight: 600;
-            margin-bottom: 20px;
-            margin-top: 20px;
-        }
-
-        .recipe-image {
-            width: 100%;
-            height: 300px;
-            background-image: url('./img/wintersalat.jpg');
-            background-size: cover;
-            background-position: center;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-
-        .recipe-meta {
-            display: flex;
-            gap: 20px;
-            margin-bottom: 20px;
-        }
-
-        .meta-item {
-            display: flex;
-            align-items: center;
-            gap: 24px;
-            font-size: 18px;
-            background-color: #EAEAEA;
-            padding: 6px 15px;
-            border-radius: 10px;
-            min-width: 150px;
-        }
-
-        .meta-icon {
-            width: 20px;
-            height: 20px;
-            background-image: url('./img/icon-clock.png');
-            background-position: center;
-        }
-
-        .portion-control {
-            display: flex;
-            align-items: center;
-            margin-bottom: 20px;
-            gap: 10px;
-        }
-
-        .portion-control input {
-            width: 50px;
-            padding: 5px;
-            font-size: 18px;
-            text-align: center;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .portion-control button {
-            padding: 8px 15px;
-            font-size: 18px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .portion-control button:hover {
-            background-color: #218838;
-        }
-
-        .ingredients-section {
-            margin-top: 20px;
-        }
-
-        .ingredients-title {
-            font-size: 20px;
-            font-weight: 600;
-            margin-bottom: 20px;
-        }
-
-        .ingredient-item {
-            display: flex;
-            align-items: center;
-            padding: 10px 15px;
-            font-size: 18px;
-            font-weight: 400;
-            border-radius: 5px;
-        }
-
-        .ingredients-text {
-            color: #333;
-            margin-top: 20px;
-            margin-bottom: 20px;
-            font-size: 18px;
-
-
-
-
-        }
-
-        .ingredient-item:nth-child(odd) {
-            background-color: #FFFFFF;
-            /*  Weißer Hintergrund für ungerade Zeilen */
-        }
-
-        .ingredient-item:nth-child(even) {
-            background-color: #EAEAEA;
-            /* Hellgrauer Hintergrund für gerade Zeilen */
-        }
-
-        .ingredient-quantity {
-            /* font-weight: 600; */
-            /* Fettschrift für die Mengenangabe */
-            margin-right: 10px;
-            /* Abstand zwischen Menge und Text */
-            color: #333;
-        }
-
-        .preparation-section {
-            margin-top: 20px;
-            width: 250px;
-
-        }
-
-        .meta-item-preparation {
-            display: flex;
-            align-items: center;
-            gap: 26px;
-            font-size: 18px;
-            background-color: #EAEAEA;
-            padding: 10px 15px;
-            border-radius: 10px;
-            min-width: 150px;
-        }
-
-        .border {
-            margin-top: 48px;
-            margin-bottom: 12px;
-            background-color: rgba(168, 165, 165, 0.2);
-            height: 1px;
-        }
-
-
-        /* section profile */
-
-        .profile {
-            display: flex;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-
-        .profile-image {
-            width: 90px;
-            background-image: url('./img/user.jpg');
-            background-size: cover;
-            background-position: center;
-            border-radius: 50%;
-            margin-right: 20px;
-        }
-
-        .profile-info {
-            display: flex;
-            gap: 10px;
-            align-items: center;
-            display: flex;
-            font-size: 18px;
-            margin-bottom: 20px;
-        }
-
-
-        .profile-title {
-            font-size: 20px;
-            margin-bottom: 20px;
-
-        }
-
-        table {
-
-            width: 100%;
-            /* Die Tabelle nimmt die volle Breite der Seite ein */
-
-
-
-        }
-    </style>
+    
 
 </head>
 
@@ -274,7 +83,7 @@
 
                 <tbody>
                     <tr class="ingredient-item">
-                        <td data-base="62.5 g" data-text="g" class="ingredient-quantity">62.5 g</td>
+                        <td data-base="62.5 " data-text="g" class="ingredient-quantity">62.5  g</td>
                         <td>Feldsalat</td>
                     </tr>
                     <tr class="ingredient-item">
@@ -286,31 +95,27 @@
                         <td>Orange</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="1 EL" class="ingredient-quantity">1 EL</td>
+                        <td data-base="1"  data-text="EL" class="ingredient-quantity">1 EL</td>
                         <td>Walnusskern</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="20 g" class="ingredient-quantity">20 g</td>
+                        <td data-base="20"  data-text="g" class="ingredient-quantity">20 g</td>
                         <td>Ziegenweichkäse</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="0.25 EL" class="ingredient-quantity">0.25 EL</td>
+                        <td data-base="0.25"  data-text="EL" class="ingredient-quantity">0.25 EL</td>
                         <td>Balsamico-Essig (hell)</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="0.25 EL" class="ingredient-quantity">0.25 EL</td>
+                        <td data-base="0.25"  data-text="EL"class="ingredient-quantity">0.25 EL</td>
                         <td>Honig</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="0" data-text="etwas" class="ingredient-quantity">etwas</td>
+                        <td data-base="0.5" data-text="TL" class="ingredient-quantity">0.5 TL</td>
                         <td>Senf</td>
                     </tr>
                     <tr class="ingredient-item">
-                        <td data-base="0.5 TL" class="ingredient-quantity">0.5 TL</td>
-                        <td>Worcestershiresauce</td>
-                    </tr>
-                    <tr class="ingredient-item">
-                        <td data-base="0.5 EL" class="ingredient-quantity">0.5 EL</td>
+                        <td data-base="0.5" data-text="EL" class="ingredient-quantity">0.5 EL</td>
                         <td>Olivenöl</td>
                     </tr>
                 </tbody>
@@ -369,6 +174,7 @@
 
             </div>
         </section>
+    
 
 
 
