--- a/Kochwelt/impressum.html
+++ b/Kochwelt/impressum.html
@@ -4,18 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impressum</title>
-    <link rel="stylesheet" href="./css/impressum.css"> <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/script.js"></script>
+    <link rel="stylesheet" href="./css/impressum.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+
     <header>
         <section class="main-head">
-    
+
             <div class="logo-head">
                 <a href="index.html">
-                    <img src="./img/logo.png" alt="Logo">
+                    <picture >
+                        <source media="(max-width: 800px)" srcset="./img/logo_small.png">
+                        <img src="./img/logo.png" alt="LOGO">
+                    </picture>
                 </a>
             </div>
-    
+            <div class="mobile-button-group">
+                <img onclick="toggleMobileMenu()" aria-hidden="true"  src="./img/icons/bars-solid.svg" alt="bars-solid">
+                <img onclick="toggleMobileMenu()" class="mobile-hidden" aria-hidden="true"  src="./img/icons/bars-staggered-solid.svg" alt="bars-staggered-solid">
+            </div>
             <nav class="nav-links">
                 <a href="./index.html">Start</a>
                 <a href="./rezept_des_tages.html">Rezept des Tages</a>
@@ -24,8 +33,17 @@
             </nav>
         </section>
     </header>
+    <div class="mobile-nav-links">
+        <nav>
+            <a href="./index.html">Start</a>
+            <a href="./rezept_des_tages.html">Rezept des Tages</a>
+            <a href="./kontakt.html">Kontakt</a>
+            <a href="./impressum.html">Impressum</a>
+        </nav>
+    </div>
 
     <main>
+    <section class="impressum">
         <h1>Impressum</h1>
 
         <h2>Angaben gemäß § 5 TMG:</h2>
@@ -62,8 +80,32 @@
 
             The icons are provided by <a href="https://fontawesome.com/" rel="nofollow" target="_blank">FontAwesome</a> unter the <a href="https://fontawesome.com/license" target="_blank" rel="nofollow">Creative Commons Attribution 4.0 International license</a>
         </p>
-
+    </section>
     </main>
 
+
+    <footer>
+        <section class="footer">
+            <picture >
+                <source media="(max-width: 700px)" srcset="./img/logo_small.png">
+                <img class="footer_logo" src="./img/logo-white.png" alt="LOGO">
+            </picture>
+
+            <div class="impressum_contact">
+                <a href="./kontakt.html">Kontakt</a>
+                <a href="./impressum.html">Impressum</a>
+            </div>
+
+            <div class="socials">
+                <a href="https://www.instagram.com/" target="_blank"><img class="sociallogo" src="./img/social_icons/Instagram.png" alt="Instagram"></a>
+
+                <a href="https://de-de.facebook.com/"  target="_blank"><img class="sociallogo"  src="./img/social_icons/facebook_logo.png" alt="facebook"></a>
+
+                <a href="https://x.com/"  target="_blank"><img class="sociallogo"  src="./img/social_icons/Twitter_Icon.png" alt="Twitter"></a>
+
+            </div>
+        </section>
+
+    </footer>
 </body>
 </html>
