--- a/Kochwelt/index.html
+++ b/Kochwelt/index.html
@@ -30,8 +30,8 @@
                 </a>
             </div>
             <div class="mobile-button-group">
-                <img onclick="toggleMobileMenu()" aria-hidden="true" focusable="false" src="./img/icons/bars-solid.svg" alt="">
-                <img onclick="toggleMobileMenu()" class="mobile-hidden" aria-hidden="true" focusable="false" src="./img/icons/bars-staggered-solid.svg" alt="">
+                <img onclick="toggleMobileMenu()" aria-hidden="true"  src="./img/icons/bars-solid.svg" alt="bars-solid">
+                <img onclick="toggleMobileMenu()" class="mobile-hidden" aria-hidden="true"  src="./img/icons/bars-staggered-solid.svg" alt="bars-staggered-solid">
             </div>
             <nav class="nav-links">
                 <a href="./index.html">Start</a>
@@ -140,11 +140,11 @@
         </div>
 
         <div class="socials">
-            <a href="https://www.instagram.com/" target="_blank"><img class="sociallogo" src="./img/social_icons/Instagram.png" alt=""></a>
+            <a href="https://www.instagram.com/" target="_blank"><img class="sociallogo" src="./img/social_icons/Instagram.png" alt="Instagram"></a>
 
-            <a href="https://de-de.facebook.com/"  target="_blank"><img class="sociallogo"  src="./img/social_icons/facebook_logo.png" alt=""></a>
+            <a href="https://de-de.facebook.com/"  target="_blank"><img class="sociallogo"  src="./img/social_icons/facebook_logo.png" alt="facebook"></a>
 
-            <a href="https://x.com/"  target="_blank"><img class="sociallogo"  src="./img/social_icons/Twitter_Icon.png" alt=""></a>
+            <a href="https://x.com/"  target="_blank"><img class="sociallogo"  src="./img/social_icons/Twitter_Icon.png" alt="Twitter"></a>
 
         </div>
     </section>
