--- a/JS Grundlagen/index.html
+++ b/JS Grundlagen/index.html
@@ -2,6 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <script src="übungen.js"></script>
     <style>
         .green_bg{
             width: 50px;
