--- a/Kochwelt/kontakt.html
+++ b/Kochwelt/kontakt.html
@@ -13,20 +13,7 @@
         rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <style>
-        .contact-form{
-            display: flex;
-            flex-direction: column;
-            max-width: 800px;
-            width: 50%;
-            min-width: 200px;
-            gap: 8px;
-            padding: 24px;
-            border: 0;
-            background-color: #DCDCDC;
-            border-radius: 2%;
-        }
-    </style>
+
 </head>
 <body>
     <header>
@@ -83,11 +70,11 @@
 
     <footer>
         <section class="footer">
-            <img class="footer_logo" img src="./img/logo-white.png" alt="LOGO">
+            <img class="footer_logo" src="./img/logo-white.png" alt="LOGO">
 
             <div class="impressum_contact">
-                <a href="kontakt.css">Kontakt</a>
-                <a href="impressum.css">Impressum</a>
+                <a href="kontakt.html">Kontakt</a>
+                <a href="impressum.html">Impressum</a>
             </div>
 
             <div class="socials">
