--- a/Kochwelt/rezept_des_tages.html
+++ b/Kochwelt/rezept_des_tages.html
@@ -219,8 +219,8 @@
             </picture>
         
             <div class="impressum_contact">
-                <a href="kontakt.css">Kontakt</a>
-                <a href="impressum.css">Impressum</a>
+                <a href="kontakt.html">Kontakt</a>
+                <a href="impressum.html">Impressum</a>
             </div>
     
             <div class="socials">
